<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_nav_home"
        app:showAsAction="always"
        android:title="@string/navHome" />

    <item
        android:id="@+id/navSearch"
        android:icon="@drawable/ic_nav_search"
        app:showAsAction="always"
        android:title="@string/navSearch" />
    <item
        android:id="@+id/navFav"
        android:icon="@drawable/ic_nav_fav"
        app:showAsAction="always"
        android:title="@string/navFavorite" />

    <item
        android:id="@+id/navSettings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"
        android:title="@string/navSettings" />




</menu>