<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RxOperaters.OperatorsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="observableActivity"
            android:text="@string/observableOperator"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="combinOperaterActivtiy"
            android:text="@string/combineOperators"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="conditionBololeanOperaterActivity"
            android:text="@string/conditionBooleanOperator"
            android:textColor="@android:color/black" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="filteringOperatorActivity"
            android:text="@string/filteringOperator"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="transFormingOperaterActivity"
            android:text="@string/transformingOperater"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="utilityOperaterActivity"
            android:text="@string/utilityOperater"
            android:textColor="@android:color/black" />

    </LinearLayout>
</ScrollView>
