<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RxOperaters.CombinOperaterActivtiy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="combineOperater"
            android:textAllCaps="false"
            android:text="@string/combineLatestOperator"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:onClick="joinOperater"
            android:text="@string/joinOperater"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:onClick="mergeOperater"
            android:text="@string/mergeOperater"
            android:textColor="@android:color/black" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="concatOperater"
            android:text="@string/concatOperater"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="zipOperater"
            android:text="@string/zipOperater"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="switchOnNext"
            android:text="@string/switchOnNext"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

    </LinearLayout>
</ScrollView>